# claude-code-sdk-rust-sonnet

./: .gitignore  Cargo.toml  IMPLEMENTATION_STATUS.md  README.md
benches/: sdk_benchmarks.rs
examples/: agents.rs  api_demo.rs  hooks.rs  mcp_calculator.rs  mcp_demo.rs  mcp_external.rs  partial_messages.rs  quick_start.rs  setting_sources.rs  stderr_callback.rs  streaming_mode.rs  system_prompt.rs  tool_permission_callback.rs
src/: client.rs  errors.rs  lib.rs  mcp.rs  message_parser.rs  query.rs  types.rs
src/transport/: mod.rs  subprocess.rs
tests/: TESTING.md  integration_simple.rs  integration_tests.rs  test_errors.rs  test_mcp.rs  test_message_parser.rs  test_permissions.rs  test_transport.rs  test_types.rs
